# sample-mcp

./: .gitignore  .mcp.json  README.md  claude_desktop_config_http.json  claude_desktop_config_sse.json  claude_desktop_config_stdio.json  pyproject.toml
src/sample_mcp/: __init__.py  server.py  server_http.py  server_sse.py  server_stdio.py
